# htcondor-accounting

./: .gitignore  README.md  pixi.toml  pyproject.toml
docs/: operations.md
examples/: site-config.toml
scripts/: run_apel.sh  run_daily.sh  run_daily_pipeline.sh  run_extract.sh  run_report.sh  run_snapshot.sh
scripts/cron.d/: htcondor-accounting
src/htcondor_accounting/: cli.py
src/htcondor_accounting/config/: load.py  models.py
src/htcondor_accounting/export/: apel_messages.py  apel_records.py  csv.py  dirq.py  ledger.py
src/htcondor_accounting/extract/: htcondor.py  identity.py
src/htcondor_accounting/models/: canonical.py  manifest.py  reporting.py
src/htcondor_accounting/render/: html.py
src/htcondor_accounting/report/: daily.py  dedup.py  jobs.py  periods.py  rollup.py  summary.py  validate.py
src/htcondor_accounting/store/: jsonl.py  layout.py
src/htcondor_accounting/templates/: base.html  monthly_report.html
src/htcondor_accounting/util/: dates.py
tests/: test_apel.py  test_cli.py  test_daily.py  test_extract_htcondor.py  test_layout.py  test_reporting.py  test_rollup.py  test_validate.py  tests_jsonl.py
